	PR debug/42873 	* var-tracking.c (canonicalize_vars_star): New. 	(dataflow_post_merge_adjust): Use it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157548 138bc75d-0d04-0410-961f-82ee72b054a4